--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -1,6 +1,6 @@
 
 % introductory paragraph
-\lettrine[lines=2,nindent=0pt]{\color{darkgray}\textbf{F}}{ootball} has grown from being the favorite sport in large parts of the world into a respected industry as reflected by high attendance rates and considerable revenues.\footnote{Except where otherwise noted, football refers to the sport also known as soccer.} For instance, the `Bundesliga', the German top league, is a major reason for public mass gatherings and had with 42,700 spectators the highest average attendance per match across all European leagues in the season 2017/18. Also economically speaking, football is synonymous with big business as the `Bundesliga' ranges in second place in Europe with generated revenues of 3.17 billion euros \citep{deloitte2019report}. With such a great appeal, the matches of the football industry generate external effects in many dimensions. On the positive side, there are higher expenditures for consumption (e.g. merchandising, catering, and accommodation) and ultimately increased local tax revenues. On the negative side, the games induce air and noise pollution, together with a higher frequency of accidents, among others. Violent fan behavior is a particularly pervasive aspect in this context and affects individuals' health, the penal system, and the police. In the season 2017/18, the State and Federal Police accumulated over 2.11 million working hours to guarantee the spectators' safety surrounding German professional football matches \citep{zis17_18}. There has been a widely noticed legal dispute between the Federal State of Bremen and the German Football League (DFL) about the reimbursement of costs for high-risk games, in which the \cite{fac_2019} declared the charges imposed by Bremen as legitimate. This study does not only focus on football matches, where social interactions lead to violence, but also deals with the question that is at the heart of the discussion of whether the negative externalities of football games that bring so much prosperity should be absorbed. 
+\lettrine[lines=2,nindent=0pt]{\color{darkgray}\textbf{F}}{ootball} has grown from being the favorite sport in large parts of the world into a respected industry as reflected by high attendance rates and considerable revenues.\footnote{Except where otherwise noted, football refers to the sport also known as soccer.} For instance, the \textit{Bundesliga}, the German top league, is a major reason for public mass gatherings and had with 42,700 spectators the highest average attendance per match across all European leagues in the season 2017/18. Also economically speaking, football is synonymous with big business as the \textit{Bundesliga} ranges in second place in Europe with generated revenues of 3.17 billion euros \citep{deloitte2019report}. With such a great appeal, the matches of the football industry generate external effects in many dimensions. On the positive side, there are higher expenditures for consumption (e.g. merchandising, catering, and accommodation) and ultimately increased local tax revenues. On the negative side, the games induce air and noise pollution, together with a higher frequency of accidents, among others. Violent fan behavior is a particularly pervasive aspect in this context and affects individuals' health, the penal system, and the police. In the season 2017/18, the State and Federal Police accumulated over 2.11 million working hours to guarantee the spectators' safety surrounding German professional football matches \citep{zis17_18}. There has been a widely noticed legal dispute between the Federal State of Bremen and the German Football League (DFL) about the reimbursement of costs for high-risk games, in which the \cite{fac_2019} declared the charges imposed by Bremen as legitimate. This study does not only focus on football matches, where social interactions lead to violence, but also deals with the question that is at the heart of the discussion of whether the negative externalities of football games that bring so much prosperity should be absorbed. 
 
 
 
@@ -57,7 +57,7 @@ The remainder of the paper is structured as follows. The next section provides i
 
 % German Football League System
 \subsection{German Football League System}
-The three full professional divisions of the German football league system are held under the jurisdiction of the German Football Association (DFB) and the German Football League (DFL). While the two top flights `Bundesliga' and `2. Bundesliga' are organized by the DFL, the third division `3. Liga' is run by the DFB itself. Teams can move through the levels of the league system by either promotion or relegation. The two top divisions consist of 18 teams that play 17 home and away games in one season. The third level contains 20 teams with 19 home and away games. The empirical approach of this paper exploits the variation in the timing of matches. Since 2006, the preparation of the match schedules for the `Bundesliga' and the `2. Bundesliga' is carried out with a software that uses integer linear programming.\footnote{For details of how the match plans are made, please refer to \href{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}} The software outlines the rough details such as the fixtures per matchday. The exact date and time, however, are determined in the course of the season. The late exact scheduling allows to take into account guidelines from local authorities, security bodies, the Central Sports Intelligence Unit (ZIS), international football associations (FIFA/UEFA), fans, clubs, and stadium operators. In addition to obvious restrictions such as the fact that neighboring clubs should play their home matches at a different time, the DFL has to consider public holidays, parallel major events, or match dates of international competitions.
+The three full professional divisions of the German football league system are held under the jurisdiction of the German Football Association (DFB) and the German Football League (DFL). While the two top flights \textit{Bundesliga} and \textit{2. Bundesliga} are organized by the DFL, the third division \textit{3. Liga} is run by the DFB itself. Teams can move through the levels of the league system by either promotion or relegation. The two top divisions consist of 18 teams that play 17 home and away games in one season. The third level contains 20 teams with 19 home and away games. The empirical approach of this paper exploits the variation in the timing of matches. Since 2006, the preparation of the match schedules for the \textit{Bundesliga} and the \textit{2. Bundesliga} is carried out with a software that uses integer linear programming.\footnote{For details of how the match plans are made, please refer to \href{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}} The software outlines the rough details such as the fixtures per matchday. The exact date and time, however, are determined in the course of the season. The late exact scheduling allows to take into account guidelines from local authorities, security bodies, the Central Sports Intelligence Unit (ZIS), international football associations (FIFA/UEFA), fans, clubs, and stadium operators. In addition to obvious restrictions such as the fact that neighboring clubs should play their home matches at a different time, the DFL has to consider public holidays, parallel major events, or match dates of international competitions.
 
 
 
@@ -65,18 +65,18 @@ The three full professional divisions of the German football league system are h
 \subsection{Football and Violent Crime}
 
 % ULTRAS & HOOLIGANS
-Spectator violence has a long tradition in the environment of professional football in Germany. From the change of terms for football fans you can see that spectator behavior underwent quite a transformation \citep{pilz2005kuttenfan}. In the 1960s and 1970s, the peaceful fan base was specified as `camp-followers', while one decade later the first problems of spectator violence arose with the presence of `football rowdies'. In the 1980s, spectator violence was particularly omnipresent with the hooligans' movement. Since the end of the 1990s, a new group appeared in the stadiums, the `Ultras'. Originated in Italy, the `Ultras' have committed themselves to fight against the commercialization of football and to revitalize traditional football culture. Over the last years, the number of violent fans has been increasing. The police differentiate between three types of football fans. Category A consists of peaceful fans, category B includes violence-prone fans, and category C contains fans that actively seek violence (violent criminals). Originally, the `Ultras' could be located mostly in category A and sporadically in category B. Recently, however, a substantial share of the `Ultras' has been classified as members of categories B and C. For instance, the \cite{zis17_18} identified 13.633 individuals belonging to either violence-prone or violence-seeking fans in the top three leagues for the season 2017/18. With more potential agitators, police officers report more aggressiveness directed against themselves \citep{feltes2010fussballgewalt}. Yet, it is not only the problem of having more violent fans, but also that the event character of violence during football games is on the rise \citep{pilz2005kuttenfan}. Violent actions are increasingly less connected with the events on the pitch. In fact, violence serves as an opportunity for identification in the quest for one's identity. Some violent fans find self-assertion by joining forces with like-minded individuals and discover their strength. The question is how to address the challenges coming from `hooligans' and `Ultras'. \cite{poutvaara2009police} investigate the impact of counter-hooliganism policy in the Swedish context. They find that the reallocation of the Sport Intelligence and Tactical Unit to other activities was accompanied by increases in violent crime by hooligans. \cite{feltes2010fussballgewalt} emphasizes the concept of `balanced policing', which acknowledges that risks coming from the spectators are dynamic and require quick responses to either escalate or deescalate.\footnote{Depending on which types of violent fans the police is facing, the officers have to adjust their behavior accordingly \citep{feltes2010fussballgewalt}. On the one hand, hooligans require a zero-tolerance policy and any absence of drastic measures is seen as an invitation to live out violent desires. On the other hand, Ultras should be given some leeway to allow for self-regulation.} 
+Spectator violence has a long tradition in the environment of professional football in Germany. From the change of terms for football fans you can see that spectator behavior underwent quite a transformation \citep{pilz2005kuttenfan}. In the 1960s and 1970s, the peaceful fan base was specified as \textit{camp-followers}, while one decade later the first problems of spectator violence arose with the presence of \textit{football rowdies}. In the 1980s, spectator violence was particularly omnipresent with the hooligans' movement. Since the end of the 1990s, a new group appeared in the stadiums, the \textit{Ultras}. Originated in Italy, the \textit{Ultras} have committed themselves to fight against the commercialization of football and to revitalize traditional football culture. Over the last years, the number of violent fans has been increasing. The police differentiate between three types of football fans. Category A consists of peaceful fans, category B includes violence-prone fans, and category C contains fans that actively seek violence (violent criminals). Originally, the \textit{Ultras} could be located mostly in category A and sporadically in category B. Recently, however, a substantial share of the \textit{Ultras} has been classified as members of categories B and C. For instance, the \cite{zis17_18} identified 13.633 individuals belonging to either violence-prone or violence-seeking fans in the top three leagues for the season 2017/18. With more potential agitators, police officers report more aggressiveness directed against themselves \citep{feltes2010fussballgewalt}. Yet, it is not only the problem of having more violent fans, but also that the event character of violence during football games is on the rise \citep{pilz2005kuttenfan}. Violent actions are increasingly less connected with the events on the pitch. In fact, violence serves as an opportunity for identification in the quest for one's identity. Some violent fans find self-assertion by joining forces with like-minded individuals and discover their strength. The question is how to address the challenges coming from \textit{hooligans} and \textit{Ultras}. \cite{poutvaara2009police} investigate the impact of counter-hooliganism policy in the Swedish context. They find that the reallocation of the Sport Intelligence and Tactical Unit to other activities was accompanied by increases in violent crime by hooligans. \cite{feltes2010fussballgewalt} emphasizes the concept of `balanced policing', which acknowledges that risks coming from the spectators are dynamic and require quick responses to either escalate or deescalate.\footnote{Depending on which types of violent fans the police is facing, the officers have to adjust their behavior accordingly \citep{feltes2010fussballgewalt}. On the one hand, hooligans require a zero-tolerance policy and any absence of drastic measures is seen as an invitation to live out violent desires. On the other hand, Ultras should be given some leeway to allow for self-regulation.} 
 
 
 
 % THEORIES OF SPECTATOR VIOLENCE
-There are a couple of theories rationalizing spectator violence.\footnote{Theoretically, there could also be a decreasing assault rate due to football games. This may happen if individuals with a higher propensity to act violently attend the matches. \cite{dahl2009movie} find a similar effect for violent movies and name this a `self-incapacitation effect'. Yet, as only hourly data can reveal the effect and the analysis draws on daily data, I focus on theories of why the rate of violence is increasing due to football games.} First, the higher number of assaults could be a mere mechanic effect arising from increased social contacts and a change in how the interactions take place \citep{montolio2019measuring}. For instance, the `Bundesliga' has the highest average attendance per match across all European main football leagues \citep{wicker2017effect}. In the season of 2014/15, more than 42,000 spectators attended on average a game in the highest flight of the German league system. This aspect is particularly relevant for smaller municipalities, which attract thousands of spectators per game \citep{lindo2018college}. Second, spectator violence may be the result of physiological arousal \citep{branscombe1992role}. Potential determinants of physiological arousal are increased heart-rate, blood pressure, and respiration, which may influence affect, cognition, and (anti-)social behavior. Third, \cite{dollard1939frustration} propose the idea of the frustration-aggression hypothesis.\footnote{\cite{berkowitz1989frustration} presents a good overview of the frustration-aggression hypothesis.} If the favorite team suffered a defeat, this may precipitate aggressive fan behavior (e.g. see the results obtained by \cite{card2011family}). Fourth, \cite{bandura1973aggression, bandura2007social} postulates the notion of `social learning' or mimicking behavior. Independent of the outcome of the match, the sheer observation of the game is enough to unleash violent actions.
+There are a couple of theories rationalizing spectator violence.\footnote{Theoretically, there could also be a decreasing assault rate due to football games. This may happen if individuals with a higher propensity to act violently attend the matches. \cite{dahl2009movie} find a similar effect for violent movies and name this a `self-incapacitation effect'. Yet, as only hourly data can reveal the effect and the analysis draws on daily data, I focus on theories of why the rate of violence is increasing due to football games.} First, the higher number of assaults could be a mere mechanic effect arising from increased social contacts and a change in how the interactions take place \citep{montolio2019measuring}. For instance, the \textit{Bundesliga} has the highest average attendance per match across all European main football leagues \citep{wicker2017effect}. In the season of 2014/15, more than 42,000 spectators attended on average a game in the highest flight of the German league system. This aspect is particularly relevant for smaller municipalities, which attract thousands of spectators per game \citep{lindo2018college}. Second, spectator violence may be the result of physiological arousal \citep{branscombe1992role}. Potential determinants of physiological arousal are increased heart-rate, blood pressure, and respiration, which may influence affect, cognition, and (anti-)social behavior. Third, \cite{dollard1939frustration} propose the idea of the frustration-aggression hypothesis.\footnote{\cite{berkowitz1989frustration} presents a good overview of the frustration-aggression hypothesis.} If the favorite team suffered a defeat, this may precipitate aggressive fan behavior (e.g. see the results obtained by \cite{card2011family}). Fourth, \cite{bandura1973aggression, bandura2007social} postulates the notion of `social learning' or mimicking behavior. Independent of the outcome of the match, the sheer observation of the game is enough to unleash violent actions.
 %Second, instinctual theories of aggression find human aggression genetically based \citep{baron1977human}. In other words, aggressive behavior is an inevitable predisposition. 
 
 
 
 % THE ROLE OF ALCOHOL
-Alcohol plays a crucial role in the context of spectator violence in German football stadiums. \cite{cook2013virtuous} describes the pharmacological effects of drinking alcohol on aggression and cognitive functioning. With drinking comes a loss of inhibition and impairments of judgment. Furthermore, participants of experiments have been found to show more aggressive behavior after drinking. The 2018 edition of the \citeauthor{PCS2018} specifies that more than every fourth assault (26.2 percent) was committed under the influence of alcohol. While some countries banned alcoholic drinks within the premises (e.g. Brazil since 2003), the rules in German stadiums are somewhat ambiguous. The DFB's security guidelines stipulate that the sale of alcoholic beverages is forbidden before and during games in the stadium. Nevertheless, with the approval of the responsible local security organs, the hosting clubs may, on their own authority, deviate from the regulations. Only in the case of high-risk games, the clubs are urged to adhere to the ban.\footnote{For details, please refer to: \href{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}.} The clubs, however, have a strong incentive to deviate from the ban as more than one-sixth (538 million Euros in the season of 2017/18) of the `Bundesliga' club's revenues comes through earnings on the matchday (e.g. tickets and catering) and the sale of alcoholic drinks contributes to that amount substantially \citep{deloitte2019report}. For this reason, alcohol and the potential side effects are very present in German football arenas.
+Alcohol plays a crucial role in the context of spectator violence in German football stadiums. \cite{cook2013virtuous} describes the pharmacological effects of drinking alcohol on aggression and cognitive functioning. With drinking comes a loss of inhibition and impairments of judgment. Furthermore, participants of experiments have been found to show more aggressive behavior after drinking. The 2018 edition of the \citeauthor{PCS2018} specifies that more than every fourth assault (26.2 percent) was committed under the influence of alcohol. While some countries banned alcoholic drinks within the premises (e.g. Brazil since 2003), the rules in German stadiums are somewhat ambiguous. The DFB's security guidelines stipulate that the sale of alcoholic beverages is forbidden before and during games in the stadium. Nevertheless, with the approval of the responsible local security organs, the hosting clubs may, on their own authority, deviate from the regulations. Only in the case of high-risk games, the clubs are urged to adhere to the ban.\footnote{For details, please refer to: \href{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}.} The clubs, however, have a strong incentive to deviate from the ban as more than one-sixth (538 million Euros in the season of 2017/18) of the \textit{Bundesliga} club's revenues comes through earnings on the matchday (e.g. tickets and catering) and the sale of alcoholic drinks contributes to that amount substantially \citep{deloitte2019report}. For this reason, alcohol and the potential side effects are very present in German football arenas.
 % any data on how much is consumed? https://www.news.de/sport/855220143/schalke-hat-die-durstigsten-fans/1/
 % Statista survey: 56  percent of respondents of a panel survey were in favor of banning alcohol from football stadiums, 35 percent defended the right to drink alcohol in football stadiums: https://de.statista.com/statistik/daten/studie/548802/umfrage/verbot-von-alkohol-in-fussballstadien/
 
@@ -102,7 +102,7 @@ The crime data comes from the German Police Crime Statistics, which is provided 
 % crime - assault distribution over time
 \input{soc_ext_fig__assault_time_distribution_2014}
 
-The micro-data is aggregated to the municipality-day level and the main outcome, the assault rate, is defined as the number of assaults per million population. Assaults are defined as actions involving physical violence. For that purpose, I use the crime type code of 'intentional simple bodily harm' (\textit{Vorsätzliche einfache Körperverletzung} § 223 StGB). There are roughly 120 types of criminal offenses in use (recorded in 6 digit codes), though the vast majority of the cases concentrate on only a handful of codes.\footnote{The top 10 of the most prevalent crime keys comprise more than 90 percent of the cases.} Figure \ref{fig_soc_ext:offense_types_distribution_2014} in the Appendix shows the distribution of cases per crime key for the twenty most common offense types in 2014. The intentional simple bodily injury is by far the most prevalent offense and it contributes to about 45 percent of all cases. The prevalence of the offense type and its association with aggression motivates the decision to have assaults in this definition as the main outcome variable.
+The micro-data is aggregated to the municipality-day level and the main outcome, the assault rate, is defined as the number of assaults per million population. Assaults are defined as actions involving physical violence. For that purpose, I use the crime type code of `intentional simple bodily harm' (\textit{Vorsätzliche einfache Körperverletzung} § 223 StGB). There are roughly 120 types of criminal offenses in use (recorded in 6 digit codes), though the vast majority of the cases concentrate on only a handful of codes.\footnote{The top 10 of the most prevalent crime keys comprise more than 90 percent of the cases.} Figure \ref{fig_soc_ext:offense_types_distribution_2014} in the Appendix shows the distribution of cases per crime key for the twenty most common offense types in 2014. The intentional simple bodily injury is by far the most prevalent offense and it contributes to about 45 percent of all cases. The prevalence of the offense type and its association with aggression motivates the decision to have assaults in this definition as the main outcome variable.
 
 Figure \ref{fig_soc_ext:assault_time_distribution_2014} shows the distribution of assaults over time. Panel A displays the variation of assaults per hour of the day.\footnote{Roughly 15 percent of the observations do not contain information on the hour. This does not entail any consequences for the main analysis, as I examine daily variation in the assault rate.} The number of assaults is increasing over the course of a day and peaks around midnight. In order to assign the cases that occur during the early hours to the day, in which they are rooted in, I define a day as running from 6:00 AM until 5:59 AM. Panel B shows the distribution of assaults across days of the week. There are relatively more assaults on Friday and Saturday, whereas the other days have assault rates that are somewhat smaller. Panel C shows that the number of assaults has a strong seasonal pattern with the highest value recorded in May and the smallest figure in August.\footnote{Panel C shows the number of assaults across months of the year while adjusting for the number of days per month.} Panel D confirms this impression by plotting the daily number of assaults. New year's eve is a particularly impressive outlier in this context.\footnote{Panels C and D are showing data for the year 2014 only. Appendix Figure \ref{fig_soc_ext:assault_year_distribution} shows the distribution per day for different years.}
 
@@ -121,7 +121,7 @@ The data on football matches is self-collected and is obtained via web scraping 
 % Descriptives about football matches
 \input{soc_ext_fig__descriptives_matches_time_attendance}
 
-Figure \ref{fig_soc_ext:descriptives_matches_time_attendance} illustrates some insights into key variables. Panel A shows the number of matches per day of the week and league. The vast majority of the matches is taking place between Friday and Sunday. This is particularly true for the highest league, whereas lower leagues play occasionally on weekdays, too. Matches happening on weekdays are exclusively held in the evenings. In contrast, matches on weekends occur usually in the afternoon. The inclusion of day-of-week fixed effects in the baseline specification helps to account for the higher share of games played on weekends, which are associated with higher levels of criminal behavior. The number of spectators vary substantially across the three professional leagues, as depicted in Panel C. The `Bundesliga' draws the highest attention with an average audience of 44,000 people per game, followed by the second league with an average 17,000 fans per match, and the lowest league attracts on average a bit less than 6,000 fans per game.
+Figure \ref{fig_soc_ext:descriptives_matches_time_attendance} illustrates some insights into key variables. Panel A shows the number of matches per day of the week and league. The vast majority of the matches is taking place between Friday and Sunday. This is particularly true for the highest league, whereas lower leagues play occasionally on weekdays, too. Matches happening on weekdays are exclusively held in the evenings. In contrast, matches on weekends occur usually in the afternoon. The inclusion of day-of-week fixed effects in the baseline specification helps to account for the higher share of games played on weekends, which are associated with higher levels of criminal behavior. The number of spectators vary substantially across the three professional leagues, as depicted in Panel C. The \textit{Bundesliga} draws the highest attention with an average audience of 44,000 people per game, followed by the second league with an average 17,000 fans per match, and the lowest league attracts on average a bit less than 6,000 fans per game.
 
 When investigating channels of how football games may affect assaults, I exploit betting odds that were obtained via web scraping from oddsportal.com. The betting odds give an idea about pregame expectations. I translate the odds of the three game outcomes to probabilities, which are the inverse of the betting odds. The probabilities serve as good predictors for game outcomes, as it is shown in Appendix Figure \ref{fig_soc_ext:pregame_probability_spread_outcomes}.\footnote{Panel A of Figure \ref{fig_soc_ext:pregame_probability_spread_outcomes} shows the close relationship between the realized score differential and the probability spread. Panel B and C demonstrate that the probability of victory is increasing with higher values of the probability spread.}
 
@@ -262,7 +262,7 @@ In the first step, I consider emotional cues as potential channels of how footba
 
 
 % game/team prominence (rivals & league)
-Second, I use information about game and team prominence as potential channels. For many sports fans, the affection for the own football team plays a central role \citep{wann1993sports}. Almost as important as the passion for the own team is the cultivation of animosities against rivals. Often resentments and hatred can translate into violent actions \citep{nassauer2011hate}. In order to test the hypothesis that the additional assaults are the result of hostile feelings, I compare the impact of matches in which known rival teams are playing against each other to regular matches. To answer this question, the game day indicator of equation \ref{eq_soc_ext:model} is replaced by an interaction with a dummy variable that equals one for high-rivalry matches. Local derbies (games between two competing teams that are based in regions of close geographical proximity) constitute high-rivalry matches.\footnote{Appendix Table \ref{tab_soc_ext:prominent_games_derbies} gives an overview of high-rivalry matches.} The estimates are shown in columns 1 and 2 of Table \ref{tab_soc_ext:reg_fe_assrate_prominent_games}. Games that are classified as high-rivalry matches lead to an average increase of 8.320 assaults per million population. This corresponds to more than three times the baseline effect. Although the standard errors are relatively large, as only 2.5 percent of the games are classified as high-rivalry matches, the effect is significantly different from regular matches. The higher rate of physical assaults during high-rivalry matches could also be rationalized by the social learning theory, in which spectators mimic the behavior displayed on the pitch. For instance, the number of cards awarded is significantly higher in high-rivalry matches.\footnote{The number of cards in derby matches is 4.324\ (s.e.=0.174), while for regular matches the number of issued cards is 3.906 (s.e.=0.029).} Next to the explanation of opposing fan groups' mutual dislike or social learning, it could be the mere prominence of teams/games that attract more (violent) people. As shown in Figure \ref{fig_soc_ext:descriptives_matches_time_attendance}, attendance varies substantially across the tiers of the German football league system. Columns 3-5 shows the effect of games by the league in which the teams are playing. The largest effect is in the highest tier, the `Bundesliga', in which a game leads to a rise in the assault rate by, on average, 3.530 assaults per million population. The impact of matches from the first league is significantly larger than the effect of matches from the other two leagues.
+Second, I use information about game and team prominence as potential channels. For many sports fans, the affection for the own football team plays a central role \citep{wann1993sports}. Almost as important as the passion for the own team is the cultivation of animosities against rivals. Often resentments and hatred can translate into violent actions \citep{nassauer2011hate}. In order to test the hypothesis that the additional assaults are the result of hostile feelings, I compare the impact of matches in which known rival teams are playing against each other to regular matches. To answer this question, the game day indicator of equation \ref{eq_soc_ext:model} is replaced by an interaction with a dummy variable that equals one for high-rivalry matches. Local derbies (games between two competing teams that are based in regions of close geographical proximity) constitute high-rivalry matches.\footnote{Appendix Table \ref{tab_soc_ext:prominent_games_derbies} gives an overview of high-rivalry matches.} The estimates are shown in columns 1 and 2 of Table \ref{tab_soc_ext:reg_fe_assrate_prominent_games}. Games that are classified as high-rivalry matches lead to an average increase of 8.320 assaults per million population. This corresponds to more than three times the baseline effect. Although the standard errors are relatively large, as only 2.5 percent of the games are classified as high-rivalry matches, the effect is significantly different from regular matches. The higher rate of physical assaults during high-rivalry matches could also be rationalized by the social learning theory, in which spectators mimic the behavior displayed on the pitch. For instance, the number of cards awarded is significantly higher in high-rivalry matches.\footnote{The number of cards in derby matches is 4.324\ (s.e.=0.174), while for regular matches the number of issued cards is 3.906 (s.e.=0.029).} Next to the explanation of opposing fan groups' mutual dislike or social learning, it could be the mere prominence of teams/games that attract more (violent) people. As shown in Figure \ref{fig_soc_ext:descriptives_matches_time_attendance}, attendance varies substantially across the tiers of the German football league system. Columns 3-5 shows the effect of games by the league in which the teams are playing. The largest effect is in the highest tier, the \textit{Bundesliga}, in which a game leads to a rise in the assault rate by, on average, 3.530 assaults per million population. The impact of matches from the first league is significantly larger than the effect of matches from the other two leagues.
 Summing up, there is evidence that the prominence of games is a crucial determinant for the effect size of football matches on the assault rate, where high-rivalry matches and games in the top league lead to more assaults.
 
 
